Changed help content and other code so it runs with Mosquitto

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Raspberry Pi Azure IoT Web Simulator</title>
-    <meta name="description" content="This is a Web simulator for Raspberry Pi as client and Azure IoT Hub as service. You can enjoy Azure IoT journey without a real device.">
-    <link rel="canonical" href="https://azure-samples.github.io/raspberry-pi-web-simulator/" />
+    <title>Raspberry Pi Web Simulator</title>
+    <meta name="description" content="This is a Web simulator for Raspberry Pi as client and Eclipse Mosquitto as service. You can enjoy KubeEdge journey without a real device.">
+    <link rel="canonical" href="http://www.knowyourtech.blog/rb-pi-web-simulator/" />
     <script src="%PUBLIC_URL%/mqttws31.js"></script>
+    <script src="%PUBLIC_URL%/paho-mqtt-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
   </head>
   <body>  
